@@ -11,6 +11,7 @@ import java.util.List;
 import java.util.Map.Entry;
 import java.util.Optional;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -36,7 +37,7 @@ public class RestSender {
   }
 
   public <S, T> ResponseEntity<T> executeWithRetry(HttpMethod httpMethod, String apiPath,
-      HttpHeaders headers, S request, Class<T> responseType, String processName) {
+      HttpHeaders headers, S request, ParameterizedTypeReference<T> responseType, String processName) {
 
     if (retryTemplate == null) {
       throw new IllegalArgumentException(String.format("#Client - [%s] retryTemplate not set", this.name));
@@ -50,7 +51,7 @@ public class RestSender {
 
   public <S, T> ResponseEntity<T> executeWithRetry(HttpMethod httpMethod, String apiPath,
       MultiValueMap<String, String> queryParams, HttpHeaders headers, S request,
-      Class<T> responseType, String processName) {
+      ParameterizedTypeReference<T> responseType, String processName) {
 
     if (retryTemplate == null) {
       throw new IllegalArgumentException(String.format("#Client - [%s] retryTemplate not set", this.name));
@@ -63,14 +64,14 @@ public class RestSender {
   }
 
   public <S, T> ResponseEntity<T> execute(HttpMethod httpMethod, String apiPath,
-      HttpHeaders headers, S request, Class<T> responseType) {
+      HttpHeaders headers, S request, ParameterizedTypeReference<T> responseType) {
     return call(new ClientRequest<>(httpMethod, apiPath, null, headers, request,
         responseType, null, null));
   }
 
   public <S, T> ResponseEntity<T> execute(HttpMethod httpMethod, String apiPath,
       MultiValueMap<String, String> queryParams, HttpHeaders headers, S request,
-      Class<T> responseType) {
+      ParameterizedTypeReference<T> responseType) {
 
 
     return call(new ClientRequest<>(httpMethod, apiPath, queryParams, headers, request,
@@ -79,17 +80,19 @@ public class RestSender {
 
   // Base Method
   private <S, T> ResponseEntity<T> call(ClientRequest<S, T> request) {
+
+    HttpEntity<S> httpEntity = request.request() == null ?
+        new HttpEntity<>(composeHttpHeaders(request.headers()))
+        : new HttpEntity<>(request.request(), composeHttpHeaders(request.headers()));
+
     try {
       StringBuilder pathBuilder = getPath(request);
-      HttpEntity<S> httpEntity = request.request() == null ?
-          new HttpEntity<>(composeHttpHeaders(request.headers()))
-          : new HttpEntity<>(request.request(), composeHttpHeaders(request.headers()));
 
       return restClient.exchange(pathBuilder.toString(), request.method(), httpEntity, request.responseType());
     } catch (Throwable ex) {
       log.error("#Client - [{}] has error, ", this.name, ex);
       if (retryTemplate != null)
-        setAttributeOnRetryContext(request.retryContext(), request.request(), request.processName(), ex);
+        setAttributeOnRetryContext(request.retryContext(), httpEntity, request.request(), request.processName(), ex);
       throw ex;
     }
   }
@@ -101,7 +104,7 @@ public class RestSender {
 
       MultiValueMap<String, String> queryParams = request.queryParams();
       for (Entry<String, List<String>> entry : queryParams.entrySet()) {
-        pathBuilder.append(entry.getKey()).append("=").append(entry.getValue().get(0)).append("&");
+        pathBuilder.append(entry.getKey()).append("=").append(entry.getValue().getFirst()).append("&");
       }
 
       pathBuilder.deleteCharAt(pathBuilder.length() - 1);
@@ -109,9 +112,10 @@ public class RestSender {
     return pathBuilder;
   }
 
-  private <S> void setAttributeOnRetryContext(RetryContext context, S request, String processName,
-      Throwable e) {
+  private <S> void setAttributeOnRetryContext(RetryContext context, HttpEntity<S> httpEntity,
+      S request, String processName, Throwable e) {
     context.setAttribute(RetryConstant.REQUEST.getName(), request);
+    context.setAttribute(RetryConstant.REQUEST_ID.getName(), httpEntity.getHeaders().getFirst(HeaderConstant.REQUEST_ID.getHeader()));
     context.setAttribute(RetryConstant.EXCEPTION.getName(), e.getCause());
     context.setAttribute(RetryConstant.PROCESS_TYPE.getName(), "client");
     context.setAttribute(RetryConstant.PROCESS_NAME.getName(), processName);
